--- a/extension/locale/fr/cookies.properties
+++ b/extension/locale/fr/cookies.properties
@@ -3,8 +3,8 @@ panel.tip.cookies=Permet d'inspecter et manipuler les cookies
 cookies.Session=Session
 cookies.AllowGlobally=Accepter les cookies des sites
 cookies.tip.AllowGlobally2=Accepter ou refuser tous les cookies par défaut
-cookies.showCookieEvents=Afficher les évènements liés aux cookies
-cookies.tip.showCookieEvents2=Afficher les évènements liés aux cookies dans la console
+cookies.showCookieEvents=Afficher les événements liés aux cookies
+cookies.tip.showCookieEvents2=Afficher les événements liés aux cookies dans la console
 cookies.clearWhenDeny=Effacer les cookies lors d'un refus
 cookies.Cut=Couper
 cookies.Copy=Copier
