--- a/extension/locale/fr/firebug-tracing.properties
+++ b/extension/locale/fr/firebug-tracing.properties
@@ -14,7 +14,7 @@ tracing.tab.Response=Réponse
 tracing.tab.Source=Source
 tracing.tab.Interfaces=Interfaces
 tracing.tab.Object=Objet
-tracing.tab.Event=Évènement
+tracing.tab.Event=Événement
 tracing.cmd.Clear=Effacer
 tracing.cmd.tip.Clear=Supprime tous les messages
 tracing.cmd.Find=Chercher
@@ -49,7 +49,7 @@ tracing.option.COMMANDLINE_Description=Ligne de commande & invite de commande
 tracing.option.COMPILATION_UNITS_Description=Unités de compilation de script
 tracing.option.CONSOLE_Description=Panneau de la console
 tracing.option.CSS_Description=Analyse CSS
-tracing.option.DISPATCH_Description=Envoi d'évènement
+tracing.option.DISPATCH_Description=Envoi d'événement
 tracing.option.DOM_Description=DOM
 tracing.option.DOMPLATE_Description=Création de domplate
 tracing.option.EDITOR_Description=Éditeur en ligne et auto-complétion
@@ -77,7 +77,7 @@ tracing.option.LINETABLE_Description=Tableau de ligne de script
 tracing.option.LOCALE_Description=Localisation
 tracing.option.LOCATIONS_Description=Emplacements des sources
 tracing.option.NET_Description=Panneau réseau
-tracing.option.NET_EVENTS_Description=Évènements réseau
+tracing.option.NET_EVENTS_Description=Événements réseau
 tracing.option.OPTIONS_Description=Préférences de Firebug
 tracing.option.PANELS_Description=Panneaux
 tracing.option.SHORTCUTS_Description=Raccourcis clavier
