--- a/extension/locale/fr/firebug.properties
+++ b/extension/locale/fr/firebug.properties
@@ -30,7 +30,7 @@ Panel-breakpoints=Points d\'arrêt
 panel.tip.breakpoints=Modifier les points d'arrêt
 Panel-callstack=Pile
 panel.tip.callstack=Observer la pile d'appel JavaScript actuelle
-Panel-html-events=Évènements
+Panel-html-events=Événements
 panel.tip.html-events=Autorise l'inspection des "event listeners" liés au noeud DOM sélectionné
 Panel-scopes=Portées
 firebug.DetachFirebug=Ouvrir Firebug dans une nouvelle fenêtre
@@ -402,8 +402,8 @@ dom.option.tip.Show_DOM_Constants=Affiche les constantes spécifiées dans le DO
 ShowClosures=Afficher les fermetures
 dom.option.tip.Show_Closures=Afficher les fermetures associées à différentes fonctions (active le débogueur)
 dom.option.tip.Show_Closures2=Afficher les fermetures associées à différentes fonctions
-ShowInlineEventHandlers=Afficher les gestionnaires d'évènements en-ligne
-ShowInlineEventHandlersTooltip=Affiche les gestionnaires d'évènements en ligne disponibles qui ne sont pas associés à une fonction
+ShowInlineEventHandlers=Afficher les gestionnaires d'événements en-ligne
+ShowInlineEventHandlersTooltip=Affiche les gestionnaires d'événements en ligne disponibles qui ne sont pas associés à une fonction
 ShowOwnProperties=Afficher uniquement les propriétés propre
 ShowOwnPropertiesTooltip=N'affiche pas la chaîne du prototype
 ShowEnumerableProperties=Afficher uniquement les propriétés énumérables
@@ -819,7 +819,7 @@ dom.tip.setBreakpoint=Positionner un point d'arrêt à la première ligne de "%S
 # Menu item label used in HTML elements context menu. Allows logging of event information
 # to the console.
 ShowEventsInConsole=Journaliser les événements
-html.tip.Show_Events_In_Console=Inscrire les informations d'évènement dans la console
+html.tip.Show_Events_In_Console=Inscrire les informations d'événement dans la console
 # LOCALIZATION NOTE (html.logAllEvents, html.logAllEvents.tip): Menu item label/tooltip
 # used in HTML Panel context menu. Allows checking all event families at once.
 html.logAllEvents=Journaliser tous les événements
@@ -994,7 +994,7 @@ net.option.tip.Disable_Browser_Cache=Désactiver le cache HTTP du navigateur
 # MozAfterPaint events.
 # See also: http://www.softwareishard.com/blog/firebug/watching-mozafterpaint-in-firebug/
 net.option.Show_Paint_Events=Afficher les événements Paint
-net.option.tip.Show_Paint_Events=Afficher les évènements MozAfterPaint en vert dans la chronologie
+net.option.tip.Show_Paint_Events=Afficher les événements MozAfterPaint en vert dans la chronologie
 # LOCALIZATION NOTE (net.option.Show_BFCache_Responses, net.option.tip.Show_BFCache_Responses):
 # Net panel option (located in tab's option menu). If set to true, the Net panel also displays responses coming from
 # BFCache (back-forward cache). See also: https://developer.mozilla.org/En/Working_with_BFCache
@@ -1020,7 +1020,7 @@ net.summary.from_cache=%S à partir du cache
 net.summary.tip.request_count=Nombre de requêtes
 net.summary.tip.total_size=Taille totale de toutes les requêtes
 net.summary.tip.total_cached_size=Taille totale en cache de toutes les requêtes
-net.summary.tip.total_request_time=Temps total pris pour charger toutes les requêtes et lorsque l'évènement 'onload' se déclenche
+net.summary.tip.total_request_time=Temps total pris pour charger toutes les requêtes et lorsque l'événement 'onload' se déclenche
 netParametersSortAlphabetically=Classer dans l'ordre alphabétique
 netParametersDoNotSort=Ne pas classer
 StopLoading=Arrêter le chargement
@@ -1114,7 +1114,7 @@ requestinfo.WindowLoad=Événement \'load\'
 # Labels used within a tooltip (aka time-info-tip) for waterfall graph in the Net panel.
 requestinfo.started.label=Horaire de lancement de requête depuis le départ
 requestinfo.phases.label=Démarrage des phases de requête et temps écoulé relatifs au lancement de la requête :
-requestinfo.timings.label=Timing de l'évènement relatif au lancement de la requête :
+requestinfo.timings.label=Timing de l'événement relatif au lancement de la requête :
 search.Firebug_Search=Recherche Firebug
 # LOCALIZATION NOTE (search.Next, search.Previous, search.Case_Sensitive, search.Case_Insensitive,
 # search.Multiple_Files, search.Use_Regular_Expression):
@@ -1270,7 +1270,7 @@ firebug.shortcut.tip.normalTextSize=Réinitialise la taille du texte utilisé da
 firebug.shortcut.help.label=Aide
 firebug.shortcut.tip.help=FAQ
 firebug.shortcut.toggleBreakOn.label=Activer/désactiver l'arrêt lors de …
-firebug.shortcut.tip.toggleBreakOn=Active/désactive la possibilité d'arrêter l'exécution d'un script lors d'évènements spécifiques survenant dans un panneau
+firebug.shortcut.tip.toggleBreakOn=Active/désactive la possibilité d'arrêter l'exécution d'un script lors d'événements spécifiques survenant dans un panneau
 # LOCALIZATION NOTE (firebug.panel_selector, firebug.panel_selector.tip): Used by Firebug menu.
 # It's used for a label and tooltip of "Panel Selector" feature. It allows to show and hide
 # individual Firebug panels.
@@ -1731,8 +1731,8 @@ console.cmd.help.debug=Ajoute un point d'arrêt au niveau de la première ligne 
 console.cmd.help.undebug=Supprime le point d'arrêt de la première ligne d'une fonction.
 console.cmd.help.monitor=Inscrit dans le journal d'activité tous les appels à une fonction.
 console.cmd.help.unmonitor=N'inscrit pas dans le journal d'activité tous les appels à une fonction.
-console.cmd.help.monitorEvents=Active la journalisation des évènements envoyés à un objet. Le second argument facultatif peut définir des évènements spécifiques ou des types d'évènements au journal d'activité. Les types d'évènements disponibles sont "composition", "contextmenu", "drag", "focus", "form", "key", "load", "mouse", "mutation", "paint", "scroll", "text", "ui", "xul", and "clipboard".
-console.cmd.help.unmonitorEvents=Désactive la journalisation de tous les évènements envoyés à un objet. Le second argument facultatif peut définir des évènements ou des familles d'évènements, pour lesquels il faut désactiver la journalisation.
+console.cmd.help.monitorEvents=Active la journalisation des événements envoyés à un objet. Le second argument facultatif peut définir des événements spécifiques ou des types d'évènements au journal d'activité. Les types d'évènements disponibles sont "composition", "contextmenu", "drag", "focus", "form", "key", "load", "mouse", "mutation", "paint", "scroll", "text", "ui", "xul", and "clipboard".
+console.cmd.help.unmonitorEvents=Désactive la journalisation de tous les événements envoyés à un objet. Le second argument facultatif peut définir des événements ou des familles d'événements, pour lesquels il faut désactiver la journalisation.
 console.cmd.help.profile=Active le profileur JavaScript. Le deuxième argument facultatif contient le texte à afficher dans l'entête du rapport du profileur.
 console.cmd.help.profileEnd=Désactive le profileur JavaScript et affiche son rapport.
 console.cmd.help.table=Permet d'inscrire dans le journal d'activité les données en utilisant un format tabulaire. La méthode prend un paramètre obligatoire qui représente des données sous forme de tableau (tableaux de tableaux ou liste d'objets). Le second paramètre facultatif peut être utilisé pour définir des colonnes et/ou des propriétés à inscrire dans le journal.
@@ -1782,7 +1782,7 @@ console.cmd.helpUrlNotAvailable=La page d'aide de cette commande n'est pas dispo
 # for performance.timing graph.
 # The graph is displayed in the Console when the user executes "performance.timing" expression.
 perftiming.bars.label=Lancement des phases du document et temps écoulé relatifs au chargement du document :
-perftiming.events.label=Timing de l'évènement relatif au chargement du document :
+perftiming.events.label=Timing de l'événement relatif au chargement du document :
 # LOCALIZATION NOTE (perftiming.details_title, perftiming.details_title_desc): A label used
 # for detailed performance timing info table.
 perftiming.details_title=Timing lié à la performance
@@ -1799,7 +1799,7 @@ perftiming.details_title_desc=Timing détaillé
 perftiming.connectEnd=Fin de la connexion au serveur.
 perftiming.connectStart=Juste avant la connexion du serveur.
 perftiming.domComplete=Juste avant que le document soit lisible.
-perftiming.domContentLoadedEventEnd=Après la fin de l'évènement DOMContentLoaded.
+perftiming.domContentLoadedEventEnd=Après la fin de l'événement DOMContentLoaded.
 perftiming.domContentLoadedEventStart=Juste avant que DOMContentLoaded démarre.
 perftiming.domInteractive=Juste avant que la lisibilité soit interactive.
 perftiming.domLoading=Juste avant que la lisibilité soit en chargement.
